--- a/TimeTable.html
+++ b/TimeTable.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<table>
+<table width="80%" align="center" border="2"> 
         <caption>Time Table</caption>
         <tr>
             <th>Time/Day</th>
@@ -16,6 +16,7 @@
             <th>Thursday</th>
             <th>Friday</th>
         </tr>
+        
 
         <tr>
             <td>10:30AM - 11:15AM</td>
