--- a/TimeTable.html
+++ b/TimeTable.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-<table width="80%" align="center" border="2"> 
-        <caption>Time Table</caption>
+<table style="background-color: rgb(0, 255, 229);" width="45%" align="center" border="2"> 
+        <caption><b>Time Table</b></caption>
         <tr>
             <th>Time/Day</th>
             <th>Monday</th>
@@ -25,6 +25,7 @@
             <td>PPS lab</td>
             <td>ENG</td>
             <td>PPS</td>
+            
         </tr>
 
         <tr>
