--- a/TimeTable.html
+++ b/TimeTable.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-<table style="background-color: rgb(0, 255, 229);" width="45%" align="center" border="2"> 
-        <caption><b>Time Table</b></caption>
+    <img src="https://aju.mastersofterp.in/bootstrap/img/aju_login7.png" alt="">
+<table style="background-color: rgb(174, 239, 233);" width="45%" align="center" border="2"> 
+        <caption><b>Time Table for B.Tech(CSE)</b></caption>
         <tr>
             <th>Time/Day</th>
             <th>Monday</th>
